--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1>hello</h1>
-    <script src="index.js"></script>
+    <button onclick="fb_login()">fb</button>
+    <script src="./index.js"></script>
   </body>
 </html>
