got user access token

--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,8 @@
   <body>
     <h1>hello</h1>
     <button onclick="fb_login()">fb</button>
+    <button onclick="fb_accessToken">access token</button>
+    <button>upload to fb</button>
     <script src="./index.js"></script>
   </body>
 </html>
