figuring out how to serve static files with a file server in a handlefunc

--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,21 @@
     <button onclick="fb_login()">fb</button>
     <button onclick="fb_accessToken">access token</button>
     <button>upload to fb</button>
+
+    <h1>Upload Files Here</h1>
+
+    <form action="facebookUpload" enctype="multipart/form-data" method="post">
+      <label class="custom-uploader" for="file">Upload Your File</label>
+      <input
+        id="file"
+        accept="image/jpeg,image/gif,image/png,application/pdf,image/x-eps"
+        name="fileToUpload"
+        type="file"
+      />
+      <button class="btn btn-success" name="submit" type="submit">
+        Upload File
+      </button>
+    </form>
     <script src="./index.js"></script>
   </body>
 </html>
